updated demo notebook

--- a/notebooks/demo_notebook.ipynb
+++ b/notebooks/demo_notebook.ipynb
@@ -3,39 +3,35 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!pip install --quiet gdown tqdm"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "W7p_6WBfo72U",
-        "outputId": "546dfa17-b99b-483e-f9c7-a18faac62be8"
+        "id": "jqPGi7-dyFw0",
+        "outputId": "4b41ec0f-1606-4565-a92e-fb798907295b"
       },
       "outputs": [],
       "source": [
-        "!git clone https://github.com/aspisov/asr.git"
+        "!git clone https://github.com/aspisov/asr.git\n",
+        "!wget https://huggingface.co/aspisov/asr/resolve/main/model_best-193347.pth -O asr/model_best.pth\n",
+        "!mkdir asr/saved\n",
+        "!wget https://openslr.trmal.net/resources/11/librispeech-vocab.txt -O asr/saved/librispeech-vocab.txt\n",
+        "!wget https://openslr.trmal.net/resources/11/3-gram.arpa.gz -O asr/saved/3-gram.arpa.gz\n",
+        "!gunzip asr/saved/3-gram.arpa.gz\n",
+        "!pip install --quiet gdown"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "exx24sj660hy"
+        "id": "UHLS7tn4w0y1"
       },
       "outputs": [],
       "source": [
-        "import subprocess\n",
         "import os\n",
+        "import subprocess\n",
         "\n",
-        "subprocess.run([\"git\", \"checkout\", \"dev\"], cwd=\"asr\")\n",
         "subprocess.run([\"uv\", \"sync\"], cwd=\"asr\")"
       ]
     },
@@ -46,68 +42,55 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "OPwQmBwL0n5s",
-        "outputId": "7c6d5dac-d8d0-4fed-ad88-449079b6157d"
-      },
-      "outputs": [],
-      "source": [
-        "!wget https://huggingface.co/aspisov/asr/resolve/main/model_best-193347.pth -O asr/model_best.pth"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jqPGi7-dyFw0",
-        "outputId": "5f84c29e-578e-4b9e-bd16-661cbe9af989"
-      },
-      "outputs": [],
-      "source": [
-        "!mkdir asr/saved\n",
-        "!wget https://openslr.trmal.net/resources/11/librispeech-vocab.txt -O asr/saved/librispeech-vocab.txt\n",
-        "!wget https://openslr.trmal.net/resources/11/3-gram.arpa.gz -O asr/saved/3-gram.arpa.gz"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "GPvXb__g877R"
-      },
-      "outputs": [],
-      "source": [
-        "!gunzip asr/saved/3-gram.arpa.gz"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "Ccxtqes9ppe5",
-        "outputId": "5f4e7bfd-fb10-4956-ca63-ed5ab687b21b"
+        "outputId": "15d77754-b5f9-4b45-99a6-2d07b42c04fd"
       },
       "outputs": [],
       "source": [
-        "import os, subprocess\n",
+        "# Fetch custom dataset from Google Drive\n",
+        "GOOGLE_DRIVE_LINK = \"https://drive.google.com/drive/folders/1sqk3q9ejBDg76C8I15jXDLe87VQDZ2_f?usp=drive_link\"\n",
+        "CUSTOM_ROOT = \"data/custom_drive\"\n",
+        "BATCH_SIZE = 5\n",
+        "!gdown --folder {GOOGLE_DRIVE_LINK} -O asr/{CUSTOM_ROOT}\n",
         "\n",
-        "env = os.environ.copy()\n",
-        "env[\"MPLBACKEND\"] = \"Agg\"\n",
         "\n",
-        "result = subprocess.run(\n",
-        "    [\"uv\", \"run\", \"python3\", \"inference.py\", \"-cn=inference_test_clean.yaml\", \"inferencer.from_pretrained=model_best.pth\"],\n",
-        "    cwd=\"asr\",\n",
-        "    env=env,\n",
-        "    capture_output=True,\n",
-        "    text=True\n",
+        "def run_inference(name: str, config: str, checkpoint: str, extra_args=None):\n",
+        "    env = os.environ.copy()\n",
+        "    env[\"MPLBACKEND\"] = \"Agg\"\n",
+        "    cmd = [\n",
+        "        \"uv\", \"run\", \"python3\", \"inference.py\",\n",
+        "        f\"-cn={config}\", f\"inferencer.from_pretrained={checkpoint}\", f\"dataloader.batch_size={BATCH_SIZE}\",\n",
+        "    ]\n",
+        "    if extra_args:\n",
+        "        cmd.extend(extra_args)\n",
+        "    print(\" \".join(cmd))\n",
+        "    result = subprocess.run(cmd, cwd=\"asr\", text=True, capture_output=True, env=env)\n",
+        "    print(result.stdout)\n",
+        "    print(result.stderr)\n",
+        "\n",
+        "CHECKPOINT_PATH = \"model_best.pth\"\n",
+        "\n",
+        "# Custom Drive dataset\n",
+        "run_inference(\n",
+        "    name=\"custom_drive\",\n",
+        "    config=\"inference_custom.yaml\",\n",
+        "    checkpoint=CHECKPOINT_PATH,\n",
+        "    extra_args=[f\"custom_dataset.dataset_root={CUSTOM_ROOT}\"],\n",
         ")\n",
-        "print(result.stdout)\n",
-        "print(result.stderr)"
+        "\n",
+        "# LibriSpeech test-clean\n",
+        "run_inference(\n",
+        "    name=\"test_clean\",\n",
+        "    config=\"inference_test_clean.yaml\",\n",
+        "    checkpoint=CHECKPOINT_PATH,\n",
+        ")\n",
+        "\n",
+        "# LibriSpeech test-other\n",
+        "run_inference(\n",
+        "    name=\"test_other\",\n",
+        "    config=\"inference_test_other.yaml\",\n",
+        "    checkpoint=CHECKPOINT_PATH,\n",
+        ")"
       ]
     },
     {
@@ -132,15 +115,7 @@
       "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
       "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
       "version": "3.13.1"
     }
   },
